[JBTM-3946] Class.newInstance() can be replaced by Class.getDeclaredConstructor().newInstance() as class.newInstance is deprecated in java 9
[JBTM-3946] Class.newInstance() can be replaced by Class.getDeclaredConstructor().newInstance() as class.newInstance is deprecated in java 9

JBTM-3946: Class.newInstance() can be replaced by Class.getDeclaredConstructor().newInstance() as class.newInstance is deprecated in java 9

[JBTM-3946]: Class.newInstance() can be replaced by Class.getDeclaredConstructor().newInstance() as class.newInstance is deprecated in java 9

[JBTM-3946] Class.newInstance() can be replaced by Class.getDeclaredConstructor().newInstance() as class.newInstance is deprecated in java 9

[JBTM-3946] Class.newInstance() can be replaced by Class.getDeclaredConstructor().newInstance() as class.newInstance is deprecated in java 9

[JBTM-3946] Class.newInstance() can be replaced by Class.getDeclaredConstructor().newInstance() as class.newInstance is deprecated in java 9