@@ -84,7 +84,7 @@ public class XTSServiceTestRunnerBean
             }
 
             try {
-                testInstance = (XTSServiceTest)testClass.newInstance(); // assumes there is a no-arg constructor
+                testInstance = (XTSServiceTest)testClass.getDeclaredConstructor().newInstance(); // assumes there is a no-arg constructor
             } catch (InstantiationException ie) {
                 log.warn("XTSServiceTestRunner : cannot instantiate test class " + testName, ie);
                 throw new Exception("XTSServiceTestRunner : cannot instantiate test class " + testName, ie);
