@@ -11,6 +11,7 @@ import org.jboss.jbossts.xts.environment.XTSPropertyManager;
 import org.jboss.jbossts.xts.recovery.logging.RecoveryLogger;
 import org.jboss.jbossts.xts.recovery.XTSRecoveryModule;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
@@ -62,7 +63,7 @@ public class CoordinatorRecoveryInitialisation
             }
             
             try {
-                XTSRecoveryModule module = (XTSRecoveryModule)clazz.newInstance();
+                XTSRecoveryModule module = (XTSRecoveryModule)clazz.getDeclaredConstructor().newInstance();
                 module.install();
                 RecoveryManager.manager().addModule(module);
                 recoveryModules.add(module);
@@ -70,8 +71,12 @@ public class CoordinatorRecoveryInitialisation
                 RecoveryLogger.i18NLogger.error_recovery_coordinator_CoordinatorRecoveryInitialisation_3(className, ie);
             } catch (IllegalAccessException iae) {
                 RecoveryLogger.i18NLogger.error_recovery_coordinator_CoordinatorRecoveryInitialisation_4(className, iae);
-            }
-        }
+            } catch (InvocationTargetException e) {
+                RecoveryLogger.i18NLogger.error_recovery_coordinator_CoordinatorRecoveryInitialisation_5(className, e);
+	    } catch (NoSuchMethodException e) {
+                RecoveryLogger.i18NLogger.error_recovery_coordinator_CoordinatorRecoveryInitialisation_6(className, e);
+	    }
+	}
 
         initialised = true;
     }
